flapivor/tests/m1/hopix/parser/bad/12-lexer-label-id-1.hopix
val x = t.Some_label